[package]
name = "termcol"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ernest1338"]
description = "Dependency-less library for simple terminal text coloring and formating"
repository = "https://github.com/Ernest1338/termcol"
homepage = "https://github.com/Ernest1338/termcol"
documentation = "https://docs.rs/termcol"
readme = "README.md"
keywords = ["terminal", "color", "ansi"]

[dependencies]
